--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: Coding Sprint - Supervised Time Series
-image: images/background.png
+image: /images/background.png
 bottom_image: images/all-logo.png
 map:
   latitude: 40.7290387
