--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-description: Coding Sprint - Supervised Time Series
+description: Coding Sprint - Supervised Neural Time Series 2017
 image: images/background.png
 bottom_image: images/all-logo.png
 map:
@@ -13,8 +13,10 @@ map:
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Supervised Neural Time Series</h1>
-			<p class="subtext editable">March 27th - 31st 2017, New York</p>
+      <center>
+  			<h1 class="editable">Supervised Neural Time Series 2017</h1>
+  			<p class="subtext editable"><b>March 27th - 31st, New York</b></p>
+      </center>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more<span class="arrow">&#x25BC;</span></a></div>
