fix local images

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title: Home
 description: Coding Sprint - Supervised Neural Time Series 2017
-image: images/background.png
-bottom_image: images/all-logo.png
+image: /images/background.png
+bottom_image: /images/all-logo.png
 map:
   latitude: 40.7290387
   longitude: -73.996374
