--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ map:
 		</div>
 	</section>
 
-	<section class="info" id="where">
+	<section class="info" id="contact">
 		<div class="container">
 			<div class="text">
-				<h2 class="editable">Where</h2>
+				<h2 class="editable">Where ?</h2>
 				<p class="editable"><a href=https://www.google.com/maps/place/6+Washington+Pl,+New+York,+NY+10003/@40.7290387,-73.996374,17z/data=!4m13!1m7!3m6!1s0x89c2599a85a86b71:0x47930e6f7b80b13!2s6+Washington+Pl,+New+York,+NY+10003!3b1!8m2!3d40.7290387!4d-73.9941853!3m4!1s0x89c2599a85a86b71:0x47930e6f7b80b13!8m2!3d40.7290387!4d-73.9941853>6 Washington place, New York University, New York.</a></p>
 			</div>
 		</div>
