--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@ map:
 			<div class="text">
 				<h2 class="editable">What?</h2>
 				<p class="editable">
-          We are witnessing a rare event in science: a paradigm shift. In case you haven't noticed, machine learning and scalable computing have, in less than a decade, demonstrated how simple information can be extracted from complex datasets.
+          Holy sh*t! We're in a paradigm shift.
         </p>
         <p class="editable">
-					In this coding sprint, we aim at gathering established data-scientists, who specialize in <b>high dimensional time series of neuronal recordings</b>, to work on a common issue: integrating, within a coherent Python ecosystem, classical signal processing and popular machine learning techniques.
+          In case you haven't noticed, machine learning and scalable computing have - in less than a decade - demonstrated how a rich set of information can be extracted from complex datasets, with consequences in most scientific and industrial fields.
         </p>
         <p class="editable">
-          We focus on increasing the <b>inter-operability of open-source packages</b> developed for distinct types of neuronal recordings (e.g. animal electrophysiology, electro-corticography and magneto-encephalography) with a simple constrain: functions must follow the <a href="scikit-learn.org">scikit-learn</a>'s API.
+					Here, we are organizing a coding sprint to gather established data-scientists, who specialize in <b>high dimensional time series</b>, to work on a common issue: integrating, within a coherent Python ecosystem, classical signal processing and popular machine learning techniques.
+        </p>
+        <p class="editable">
+          We focus on increasing the <b>inter-operability of open-source packages</b> developed for particularly complex yet manipulable data: neuronal recordings (e.g. animal electrophysiology, electro-corticography and magneto-encephalography). And we impose a simple constrain: functions and packages must follow the <a href="scikit-learn.org">scikit-learn</a>'s API.
 				</p>
         <p class="editable">
-        The eco-system would allow users to quickly build effective pipelines to fit, make predictions from and score complex models on raw or transformed time series, within <b>a principled workflow</b>:
+          This eco-system will allow users to quickly build effective pipelines to fit, make predictions from and score complex models on raw or transformed time series, within <b>a principled workflow</b>:
         </p>
         <p class="editable">
         {% highlight python %}
@@ -85,7 +88,7 @@ map:
         {% endhighlight %}
         </p>
         <p class="editable">
-          This work directly i) tightens the neuroscience and machine learning communities ii) increases the modularity and robustness of Python eco-system, and therefore iii) facilitate scientists' daily work by producing robust and useable cutting-edge tools.
+          This effort will directly i) tighten the neuroscience and machine learning communities ii) increase the modularity and robustness of Python eco-system, and therefore iii) facilitate scientists' daily work by producing robust and useable cutting-edge tools.
         </p>
     </div>
   </div>
@@ -106,7 +109,7 @@ map:
 				{% endfor %}
 			</ul>
 
-      The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
+      The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
 
 		</div>
 	</section>
