--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ map:
           We focus on increasing the <b>inter-operability of open-source packages</b> developed for particularly complex yet manipulable data: neuronal recordings (e.g. animal electrophysiology, electro-corticography and magneto-encephalography). And we impose a simple constrain: functions and packages must follow the <a href="scikit-learn.org">scikit-learn</a>'s API.
 				</p>
         <p class="editable">
-          This eco-system will allow users to quickly build effective pipelines to fit, make predictions from and score complex models on raw or transformed time series, within <b>a principled workflow</b>:
+          This framework will allow users to quickly build effective pipelines to fit, make predictions from and score complex models on raw or transformed time series, within <b>a principled workflow</b>:
         </p>
         <p class="editable">
         {% highlight python %}
