paragraph in contact

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ map:
 	<section class="contact", id="contact">
 		<div class="container">
 			<h2 class="editable">Contact</h2>
-        jeanremi.king [at] gmail.com
+        <p>jeanremi.king [at] gmail.com</p>
     </div>
   </section>
 
