--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@ map:
       </center>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more<span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more">
+    <a href="#learn-more">
+      <center><p class="subtext editable">Learn more</p>
+      <img src="/images/arrow.gif">
+    </center></a></div>
 </section>
 
 <div class="content">
@@ -114,7 +118,7 @@ map:
 		</div>
 	</section>
 
-	<section class="info" id="contact">
+	<section class="info" id="where">
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">Where ?</h2>
