horrible but working fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ map:
 	<div class="learn-more">
     <a href="#learn-more">
       <center><p class="subtext editable">Learn more</p>
-      <img src="/images/arrow.gif">
+      <img src="https://kingjr.github.io/supervised_time_series/images/arrow.gif">
     </center></a></div>
 </section>
 
