--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ map:
 					Here, we are organizing a coding sprint to gather established data-scientists, who specialize in <b>high dimensional time series</b>, to work on a common issue: integrating, within a coherent Python ecosystem, classical signal processing and popular machine learning techniques.
         </p>
         <p class="editable">
-          We focus on increasing the <b>inter-operability of open-source packages</b> developed for particularly complex yet manipulable data: neuronal recordings (e.g. animal electrophysiology, electro-corticography and magneto-/electro-encephalography (M/EEG)). And we impose a simple constrain: functions and packages must follow the <a href="http://scikit-learn.org/stable/">scikit-learn</a>'s API.
+          We focus on increasing the <b>inter-operability of open-source packages</b> developed for particularly complex yet manipulable data: neuronal recordings (e.g. animal electrophysiology, electro-corticography and magneto-/electro-encephalography (M/EEG)). And we impose a simple constraint: functions and packages must follow the <a href="http://scikit-learn.org/stable/">scikit-learn</a>'s API.
 				</p>
         <p class="editable">
           This framework will allow users to quickly build effective pipelines to fit, make predictions from and score complex models on raw or transformed time series, within <b>a principled workflow</b>:
