FIX width problem

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ map:
     </center></a></div>
 </section>
 
-<div class="content">
+<div class="content" class="container-fluid">
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
