--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ map:
 					</li>
 				{% endfor %}
 			</ul>
-
-      The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
-
+      <p class="editable">
+        The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
+      </p>
 		</div>
 	</section>
 
