riemann typo fixed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ map:
 				    </li>
 				    <li> <a href="https://github.com/kordinglab/spykes">Spykes</a> offers 101 analysis tools for spike trains and visualization, including rasters, PSTHs, tuning curves, RF estimation and population decoding.
 				    </li>
-				    <li> <a href="https://github.com/alexandrebarachant/pyRiemann">Pyreimann</a> offers tools to characterize the covariance structure of high-dimensional signals with Reimannian geometry.
+				    <li> <a href="https://github.com/alexandrebarachant/pyRiemann">PyRiemann</a> offers tools to characterize the covariance structure of high-dimensional signals with Riemannian geometry.
 				    </li>
 				</ul>
 				
