--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ map:
 				</p>
 
 				<ul>
-				    <li> <a href="https://github.com/mne-tools/mne-python">MNE Python</a> is a single suite of tools for pre-processing, source-modeling, decoding and visualization of M/EEG data.
+				    <li> <a href="https://github.com/mne-tools/mne-python">MNE Python</a> is a single suite of tools for pre-processing, source-modeling, decoding and visualization of MEG, EEG and ECoG data.
 				    </li>
 				    <li> <a href="https://github.com/glm-tools/pyglmnet">Pyglmnet</a> enables generalized linear modeling with advanced regularization.
 				    </li>
