--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ map:
 			        </p>
 				<h2 class="editable">What?</h2>
 			        <p class="editable">
-				  Supervised Neural Time Series is a week-long coding sprint to gather established data scientists, who specialize in high-dimensional neural time series. Together, we will work on advancing popular or upcoming FOSS projects that enable the analysis of a broad class of neural recordings: extracellular neurophysiology (spike trains), electro-corticography and magneto-/electro-encephalography (M/EEG).
+				  Supervised Neural Time Series is a week-long coding sprint to gather established data scientists, who specialize in high-dimensional neural time series. Together, we will work on advancing popular or upcoming FOSS projects that enable the analysis of a broad class of neural recordings: extracellular neurophysiology (spike trains), electro-corticography (ECoG) and magneto-/electro-encephalography (MEG/EEG).
 				</p>
 
 				<ul>
