FIX: Minor tweaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ map:
 				</p>
 
 				<ul>
-				    <li> <a href="https://github.com/mne-tools/mne-python">MNE Python</a> is a single suite of tools for pre-processing, source-modeling, decoding and visualization of MEG, EEG and ECoG data.
+				    <li> <a href="https://github.com/mne-tools/mne-python">MNE</a> is a single suite of tools for pre-processing, source-modeling, decoding and visualization of MEG, EEG and ECoG data.
 				    </li>
 				    <li> <a href="https://github.com/glm-tools/pyglmnet">Pyglmnet</a> enables generalized linear modeling with advanced regularization.
 				    </li>
@@ -52,11 +52,11 @@ map:
 				    <li> <a href="https://github.com/alexandrebarachant/pyRiemann">PyRiemann</a> offers tools to characterize the covariance structure of high-dimensional signals with Riemannian geometry.
 				    </li>
 				</ul>
-				
+
 				<p class="editable">
 				  We will soon post a wishlist of pull requests for these projects. Stay tuned!
 				</p>
-				
+
 				<p class="editable">
 				  We are looking for established data science developers to both contribute and bring their own projects. Although the organizers specialize in neural time series, we are looking to productively engage with data scientists from fields with similarly structure data (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc.). In keeping with this push for diversity, we particularly welcome women and underrepresented minorities.
 				</p>
@@ -88,7 +88,7 @@ map:
 	<section class="info" id="where">
 		<div class="container">
 			<div class="text">
-				<h2 class="editable">Where ?</h2>
+				<h2 class="editable">Where?</h2>
 				<p class="editable"><a href=https://www.google.com/maps/place/6+Washington+Pl,+New+York,+NY+10003/@40.7290387,-73.996374,17z/data=!4m13!1m7!3m6!1s0x89c2599a85a86b71:0x47930e6f7b80b13!2s6+Washington+Pl,+New+York,+NY+10003!3b1!8m2!3d40.7290387!4d-73.9941853!3m4!1s0x89c2599a85a86b71:0x47930e6f7b80b13!8m2!3d40.7290387!4d-73.9941853>6 Washington place, New York University, New York.</a></p>
 			</div>
 		</div>
@@ -126,6 +126,15 @@ map:
 				}
 			</script>
 			<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
+		</div>
+	</section>
+
+	<section class="info" id="when">
+		<div class="container">
+			<div class="text">
+				<h2 class="editable">When?</h2>
+				<p class="editable">The sprint will take place Monday March 27<sup>th</sup> - Friday March 31<sup>st</sup>, 2016. The day-by-day schedule is TBD.</p>
+			</div>
 		</div>
 	</section>
 
