FIX: Minor fixes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ map:
 </section>
 
 <div class="content" class="container-fluid">
-	<section class="info" id="learn-more">
+	<section class="info" id="why-what">
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Why?</h2>
@@ -61,13 +61,11 @@ map:
 				  We are looking for established data science developers to both contribute and bring their own projects. Although the organizers specialize in neural time series, we are looking to productively engage with data scientists from fields with similarly structure data (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc.). In keeping with this push for diversity, we particularly welcome women and underrepresented minorities.
 				</p>
 
-    </div>
-  </div>
-
+			</div>
+		</div>
 	</section>
 
-
-	<section class="pad" id='who'>
+	<section class="pad" id="who">
 		<div class="container">
 			<h2 class="editable">Who?</h2>
 			<ul class="staff">
@@ -79,13 +77,13 @@ map:
 					</li>
 				{% endfor %}
 			</ul>
-      <p class="editable">
-        The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
-      </p>
+			<p class="editable">
+			The current developers focus on <i>neural</i> time series. However, we are particularly interested in productive exchange with other scientific fields that encounter similarly structured signals (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc).
+			</p>
 		</div>
 	</section>
 
-	<section class="info" id="where">
+	<section class="info" id="where-when">
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">Where?</h2>
@@ -127,9 +125,6 @@ map:
 			</script>
 			<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
 		</div>
-	</section>
-
-	<section class="info" id="when">
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">When?</h2>
