--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ map:
 		</div>
 	</div>
 	<div class="learn-more">
-    <a href="#learn-more">
+    <a href="#why-what">
       <center><p class="subtext editable">Learn more</p>
       <img src="https://kingjr.github.io/supervised_time_series/images/arrow.gif">
     </center></a></div>
