--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bottom_image: /images/all-logo.png
 map:
   latitude: 40.7290387
   longitude: -73.996374
-  address: "6 Washington Place, New York University, New York"
+  address: "60 5th Avenue, New York University, New York"
   zoom: 13
 ---
 
@@ -87,7 +87,7 @@ map:
 		<div class="container">
 			<div class="text">
 				<h2 class="editable">Where?</h2>
-				<p class="editable"><a href=https://www.google.com/maps/place/6+Washington+Pl,+New+York,+NY+10003/@40.7290387,-73.996374,17z/data=!4m13!1m7!3m6!1s0x89c2599a85a86b71:0x47930e6f7b80b13!2s6+Washington+Pl,+New+York,+NY+10003!3b1!8m2!3d40.7290387!4d-73.9941853!3m4!1s0x89c2599a85a86b71:0x47930e6f7b80b13!8m2!3d40.7290387!4d-73.9941853>6 Washington place, New York University, New York.</a></p>
+				<p class="editable"><a href=https://www.google.com/maps/place/NYU+Center+for+Data+Science/@40.735016,-73.9969907,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2599787834ad9:0x5dd8af15d9fbc8a3!8m2!3d40.735016!4d-73.994802>60 5th Avenue, New York University, New York.</a></p>
 			</div>
 		</div>
 		<div class="container flex">
