ENH: add prepariring instructions

--- a/index.html
+++ b/index.html
@@ -54,16 +54,35 @@ map:
 				</ul>
 
 				<p class="editable">
-				  We will soon post a wishlist of pull requests for these projects. Stay tuned!
-				</p>
-
-				<p class="editable">
 				  We are looking for established data science developers to both contribute and bring their own projects. Although the organizers specialize in neural time series, we are looking to productively engage with data scientists from fields with similarly structure data (finance, musicology, speech processing, climate science, seismology, kinect and radar analyses, etc.). In keeping with this push for diversity, we particularly welcome women and underrepresented minorities.
 				</p>
 
 			</div>
 		</div>
 	</section>
+
+  <section class="pad" id="get-ready">
+		<div class="container">
+			<h2 class="editable">Get Ready!</h2>
+				<p class="editable">
+				  The detailed Pull Requests are described on the github repository of each package (<a href="https://github.com/mne-tools/mne-python/projects/1">MNE</a>, <a href="https://github.com/glm-tools/pyglmnet/projects/1">pyGLMnet</a>, <a href="https://github.com/KordingLab/spykes">spykes</a>, <a href="https://github.com/alexandrebarachant/pyRiemann">pyRiemann</a>).
+          <p class="editable">
+          If you are not a core developer, you will need to:
+          </p>
+  				<ul>
+  				    <li> ensure that you have installed the master (dev) branch of each package.</li>
+              <li> you have the tools to contribute to FOSS (<a href='http://mne-tools.github.io/stable/contributing.html?highlight=contribute'>See MNE recommendation</a>).</li>
+              <li> identify a specific pull request.</li>
+              <li> contact the assigned core developer(s) <i>in advance</i> to discuss the requirements.</li>
+          </ul>
+          <p class="editable"> Else: </p>
+          <ul>
+  				    <li> open issues that need to be addressed in the coding sprint.</li>
+              <li> ensure they contain explicit descriptions, a difficulty level and an assignee.</li>
+          </ul>
+				</p>
+    </div>
+  </section>
 
 	<section class="pad" id="who">
 		<div class="container">
