--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ map:
 			<h2 class="editable">Get Ready!</h2>
 				<p class="editable">
 				  The detailed Pull Requests are described on the github repository of each package (<a href="https://github.com/mne-tools/mne-python/projects/1">MNE</a>, <a href="https://github.com/glm-tools/pyglmnet/projects/1">pyGLMnet</a>, <a href="https://github.com/KordingLab/spykes">spykes</a>, <a href="https://github.com/alexandrebarachant/pyRiemann">pyRiemann</a>).
+
+          During the sprint, we'll chat on <a href="https://gitter.im/mne-tools/supervised_timeseries_2017">gitter</a>.
           <p class="editable">
           If you are not a core developer, you will need to:
           </p>
