--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ map:
           If you are not a core developer, you will need to:
           </p>
   				<ul>
-              <li> Contact me  (<p>jeanremi.king [at] gmail.com</p>) to sign-up to the coding sprint and be allowed in the building.</li>
+              <li> contact me (jeanremi.king [at] gmail.com) to sign-up to the coding sprint and be allowed in the building.</li>
   				    <li> ensure that you have installed the master (dev) branch of each package.</li>
               <li> you have the tools to contribute to FOSS (<a href='http://mne-tools.github.io/stable/contributing.html?highlight=contribute'>See MNE recommendation</a>).</li>
               <li> identify a specific pull request.</li>
