--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bottom_image: /images/all-logo.png
 map:
   latitude: 40.7290387
   longitude: -73.996374
-  address: "60 5th Avenue, New York University, New York"
+  address: "(6th floor), 60 5th Avenue, New York University, New York"
   zoom: 13
 ---
 
