--- a/index.html
+++ b/index.html
@@ -162,6 +162,23 @@ map:
     </div>
   </section>
 
+  <section class="achievements", id="achievements">
+		<div class="container">
+			<h2 class="editable">Main enhancements</h2>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4144">MNE: Add SPoC object to decode continuous targets from oscillatory activity</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/3563">MNE: Merge the code of Xdawn and rERP to extract evoked responses from continuous raw signals</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4119">MNE: Use frequency domain for XC/AC optimization in ReceptiveField.</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4139">MNE: Add example of Time-Frequency summary with Global Field Power.</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4115">MNE: Add example of Time-Frequency Decoding based on Common Spatial Pattern.</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4103">MNE: Add scikit-learn compatible SlidingEstimator, GeneralizingEstimator and cross_val_multiscore.</a></p>
+        <p><a href="https://twitter.com/choldgraf/status/848224615960805376">MNE: 3D vizualization in notebook.</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4097">MNE: Improved resolution of favicon ;)</a></p>
+        <p><a href="https://github.com/glm-tools/pyglmnet/issues/23">pyGLMnet: Add predict_proba method compatible with scikit-learn.</a></p>
+        <p><a href="https://github.com/glm-tools/pyglmnet/issues/97">pyGLMnet: Add scorers metrics.</a></p>
+        <p><a href="https://github.com/glm-tools/pyglmnet/issues/158">pyGLMnet: Add GLM and GLMCV estimators.</a></p>
+    </div>
+  </section>
+
   <section class="logos", id="logo">
 		<div class="container">
 			<div class="text">
