--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ map:
         <p><a href="https://github.com/mne-tools/mne-python/pull/4139">MNE: Add example of Time-Frequency summary with Global Field Power.</a></p>
         <p><a href="https://github.com/mne-tools/mne-python/pull/4115">MNE: Add example of Time-Frequency Decoding based on Common Spatial Pattern.</a></p>
         <p><a href="https://github.com/mne-tools/mne-python/pull/4103">MNE: Add scikit-learn compatible SlidingEstimator, GeneralizingEstimator and cross_val_multiscore.</a></p>
-        <p><a href="https://twitter.com/choldgraf/status/848224615960805376">MNE: 3D vizualization in notebook.</a></p>
+        <p><a href="https://github.com/mne-tools/mne-python/pull/4110">MNE: Generalize real-time clients and Add LSL real-time client.</a></p>
+	<p><a href="https://twitter.com/choldgraf/status/848224615960805376">MNE: 3D vizualization in notebook.</a></p>
         <p><a href="https://github.com/mne-tools/mne-python/pull/4097">MNE: Improved resolution of favicon ;)</a></p>
         <p><a href="https://github.com/glm-tools/pyglmnet/issues/23">pyGLMnet: Add predict_proba method compatible with scikit-learn.</a></p>
         <p><a href="https://github.com/glm-tools/pyglmnet/issues/97">pyGLMnet: Add scorers metrics.</a></p>
